- Protection tab in layout dialog: you unprotect certain cells, hide their
  contents, hide the formulas, or select them for not being printed
- FindNext, FindPrevious cell enhancement for find
- Fill: Fill area from right to left, left to right, bottom to top, top to bottom
- Full zoom support
- Printing:
  + High resolution printing (600dpi)
  + Improved WYSIWYG
  + Zoom support on printout


New functions:

Date/Time (16):
- EDATE, EOMONTH, DAYS360, WEEKDAY, TIMEVALUE, DATEVALUE, YEAR,
  MONTH, DAY, HOUR, MINUTE, SECOND, DAYNAME, MONTHNAME, EASTERSUNDAY,
  ISOWEEKNUM

Math (16):
- SUBTOTAL, POWER, TRUNC, CEILING, PRODUCT (now Excel compatible),
  KPRODUCT, RANDEXP, RANDBINOM, RANDNEGBINOM, RANDBERNOULLI,
  RANDPOISSON, MROUND, COUNTA, MINA, MAXA, SUMA

Statistical (24):
- VARP, STDEV, VAR, STDEVP, GEOMEAN, HARMEAN,
  KURT, LOGINV, DEVSQ, STANDARDIZE, HYPGEOMDIST,
  NEGBINOMDIST, KURTP, CORREL, COVAR, SMALL, LARGE
  STDEVA, STDEVPA, VARA, VARPA, SKEW, SKEWP, MODE

Financial (19):
- PPMT, DDB, DURATION, PMT, NPER,
  ISPMT, IPMT, TBILLEQ, TBILLPRICE, TBILLYIELD,
  ACCRINT, ACCRINTM, COUPNUM, DOLLARDE, DOLLARFR,
  DISC, EFFECT, INTRATE, RECEIVED

Database (12):
- DAVERAGE, DCOUNT, DCOUNTA, DGET, DMAX, DMIN,
  DPRODUCT, DSTDEV, DSTDEVP, DSUM, DVAR, DVARP

Reference & Lookup (8):
- ADDRESS, AREAS, CHOOSE, COLUMN, COLUMNS, 
  INDIRECT, ROW, ROWS

Engineering (2):
- DELTA, GESTEP

Logical (2):
- FALSE, TRUE

Information (2):
- ISNONTEXT, ISNUMBER

Obsolete formulas 
- stddev (was stddevp in fact)
- day (is dayname now)
- month (is monthname now)

Obsolete but still usable formulas (do not show up in dialog )
- variance, pow, isnottext, isnum, effective

    
=====================================================    
After 1.2 above
=====================================================


Changes from 1.1 to 1.2
=======================

Since RC1:
----------
Bugfixes:
- Fix display and printout with special files (offset by 1 pixel).